# rust_web_server

./: .env  README.md
webapp/: Cargo.toml
webapp/src/: mod.rs
webservice/: Cargo.toml  db.sql
webservice/src/: db_access.rs  errors.rs  handlers.rs  models.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
